chore(spark): rename package to com.hongbomiao (#7549)